# sqlx-db-tester

./: .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  Makefile  README.md  cliff.toml  deny.toml
.github/workflows/: build.yml
examples/: mysql_example.rs
fixtures/: todos.csv
fixtures/mysql_migrations/: 001_create_todos.sql
fixtures/seeds/: 20240101120000_initial_todos.sql  20240102130000_additional_todos.sql
migrations/: 20221016060903_todo.sql
specs/: 0001-code-improvements.md
specs/fix-review-comments-for/: pr-fixes.md
specs/update-deps-latest-version/: code-changes.md  verification-results.md
src/: lib.rs  mysql.rs  postgres.rs  sqlite.rs
