[package]
name = "sqlx-db-tester"
version = "0.3.2"
authors = ["Tyr Chen <tyr.chen@gmail.com>"]
edition = "2021"
license = "MIT"
documentation = "https://docs.rs/sqlx-db-tester"
repository = "https://github.com/tyrchen/sqlx-db-tester"
homepage = "https://github.com/tyrchen/sqlx-db-tester"
description = "A simple tool to test sqlx with postgres. It will automatically create a database and drop it after the test."

readme = "README.md"
categories = ["development-tools"]
keywords = ["sqlx", "postgres", "database", "test"]

[dependencies]
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "postgres"] }
tokio = { version = "1.24.1", features = ["macros", "rt", "rt-multi-thread"] }
uuid = { version = "1.2.2", features = ["v4"] }
