[package]
name = "sqlx-db-tester"
version = "0.7.1"
authors = ["Tyr Chen <tyr.chen@gmail.com>"]
edition = "2024"
license = "MIT"
documentation = "https://docs.rs/sqlx-db-tester"
repository = "https://github.com/tyrchen/sqlx-db-tester"
homepage = "https://github.com/tyrchen/sqlx-db-tester"
description = "A simple tool to test sqlx with PostgreSQL and MySQL. It will automatically create a database and drop it after the test."

readme = "README.md"
categories = ["development-tools"]
keywords = ["sqlx", "postgres", "mysql", "database", "test"]

[features]
default = ["postgres"]
postgres = ["sqlx/postgres"]
mysql = ["sqlx/mysql"]

[dependencies]
anyhow = "1"
csv = "1"
itertools = "0.14"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls"] }
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
uuid = { version = "1", features = ["v4"] }
